[package]
name = "underworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform = { path = "_engine/platform" }
graphics = { path = "_engine/graphics" }
network = { path = "_engine/network"}

cgmath = "0.18.0"
serde = { version = "1.0.197", features = ["derive"] }

[workspace]
resolver = "2"
members = [
  "_engine/*"
]
