[package]
name = "underworld"
version = "0.1.0"
edition = "2021"
default-run = "full"

[[bin]]
name = "full"
path = "src/bin/full.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"


[dependencies]
platform = { path = "_engine/platform" }
graphics = { path = "_engine/graphics" }
network = { path = "_engine/network"}

cgmath = "0.18.0"
serde = { version = "1.0.197", features = ["derive"] }

[workspace]
resolver = "2"
members = [
  "_engine/*"
]
