[package]
name = "underworld"
version = "0.1.0"
edition = "2021"
default-run = "full"

[[bin]]
name = "full"
path = "src/bin/full.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"


[dependencies]
platform = { path = "_engine/platform" }
graphics = { path = "_engine/graphics" }
network = { path = "_engine/network"}

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

cgmath = { version = "0.18.0", features = ["serde"] }
rand_pcg = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"

rlua = "0.20.0"


[workspace]
resolver = "2"
members = [
  "_engine/*"
]
